--- a/.env.example
+++ b/.env.example
@@ -110,14 +110,14 @@ SERPAPI_API_KEYS=your_serpapi_key_here
 # 
 # 方式1：Discord Webhook（推荐，无需 Bot 账号）
 # 在 Discord 频道设置 -> 集成 -> Webhook -> 新建 Webhook -> 复制 URL
-# DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_id/your_webhook_token
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_id/your_webhook_token
 # 
 # 方式2：Discord Bot API（需要 Bot 账号和频道 ID）
 # 1. 创建 Bot：https://discord.com/developers/applications -> 新建应用 -> Bot -> 创建 Bot
 # 2. 获取 Bot Token：Bot 页面 -> 重置 Token
 # 3. 获取频道 ID：Discord 开启开发者模式 -> 右键频道 -> 复制 ID
-# DISCORD_BOT_TOKEN=your_bot_token_here
-# DISCORD_MAIN_CHANNEL_ID=your_channel_id_here
+DISCORD_BOT_TOKEN=your_bot_token_here
+DISCORD_MAIN_CHANNEL_ID=your_channel_id_here
 # 
 # 【高级配置】消息长度限制（字节）
 # 超过限制会自动分批发送，一般无需修改
